--- a/work/makefile
+++ b/work/makefile
@@ -2,7 +2,7 @@ CFLAGS += -Wall -pedantic -g -std=c99 -Wextra -Wfloat-equal -Wshadow -Wpointer-a
 LDLIBS += -lm -lcrypto
 CC = gcc
 
-all: test-inodes test-file
+all: test-inodes test-file test-dirent
 test-inodes: test-core.o error.o test-inodes.o mount.o sector.o inode.o filev6.o
 
 test-file: test-core.o error.o test-file.o mount.o sector.o inode.o filev6.o sha.o
