--- a/work/makefile
+++ b/work/makefile
@@ -2,12 +2,14 @@ CFLAGS += -Wall -pedantic -g -std=c99 -Wextra -Wfloat-equal -Wshadow -Wpointer-a
 LDLIBS += -lm -lcrypto
 CC = gcc
 
-all: test-inodes test-file test-dirent
+all: test-inodes test-file test-dirent shell
 test-inodes: test-core.o error.o test-inodes.o mount.o sector.o inode.o filev6.o
 
 test-file: test-core.o error.o test-file.o mount.o sector.o inode.o filev6.o sha.o
 
 test-dirent: test-core.o test-dirent.o error.o mount.o sector.o inode.o sha.o filev6.o direntv6.o
+
+shell: shell.o
 
 clean:
 	rm *.o
