--- a/done/makefile
+++ b/done/makefile
@@ -1,8 +1,15 @@
-all: test-inodes
-error.o: error.c error.h
-mount.o: mount.c mount.h unixv6fs.h bmblock.h error.h sector.h
-sector.o: sector.c mount.h unixv6fs.h bmblock.h error.h sector.h
-test-core.o: test-core.c mount.h unixv6fs.h bmblock.h error.h
-test-inodes.o: test-inodes.c mount.o unixv6fs.h bmblock.h inode.h
-inode.o: inode.c inode.h unixv6fs.h mount.h bmblock.h sector.h
-test-inodes: test-core.o error.o test-inodes.o mount.o sector.o inode.o
+CFLAGS += -Wall -pedantic -g -std=c99 -Wextra -Wfloat-equal -Wshadow -Wpointer-arith -Wbad-function-cast -Wcast-qual -Wcast-align -Wwrite-strings -Wconversion -Wunreachable-code
+LDLIBS += -lm -lcrypto
+CC = gcc
+
+all: test-inodes test-file test-dirent shell
+test-inodes: test-core.o error.o test-inodes.o mount.o sector.o inode.o filev6.o
+
+test-file: test-core.o error.o test-file.o mount.o sector.o inode.o filev6.o sha.o
+
+test-dirent: test-core.o test-dirent.o error.o mount.o sector.o inode.o sha.o filev6.o direntv6.o
+
+shell: shell.o
+
+clean:
+	rm *.o
