reloaded and continued fs.c

--- a/work/makefile
+++ b/work/makefile
@@ -2,7 +2,7 @@ CFLAGS += -Wall -pedantic -g -std=c99 -Wextra -Wfloat-equal -Wshadow -Wpointer-a
 LDLIBS += -lm -lcrypto
 CC = gcc
 
-all: test-inodes test-file test-dirent shell
+all: test-inodes test-file test-dirent shell fs
 test-inodes: test-core.o error.o test-inodes.o mount.o sector.o inode.o filev6.o
 
 test-file: test-core.o error.o test-file.o mount.o sector.o inode.o filev6.o sha.o
@@ -17,5 +17,5 @@ clean:
 fs.o: fs.c
 	$(COMPILE.c) -D_DEFAULT_SOURCE $$(pkg-config fuse --cflags) -o $@ -c $<
 
-fs: fs.o mount.o sector.o
+fs: fs.o mount.o sector.o inode.o filev6.o direntv6.o error.o
 	$(LINK.c) -o $@ $^ $(LDLIBS) $$(pkg-config fuse --libs)
