--- a/work/makefile
+++ b/work/makefile
@@ -2,7 +2,7 @@ CFLAGS += -Wall -pedantic -g -std=c99 -Wextra -Wfloat-equal -Wshadow -Wpointer-a
 LDLIBS += -lm -lcrypto
 CC = gcc
 
-all: test-inodes test-file test-dirent shell fs
+all: test-inodes test-file test-dirent shell fs test-bitmap
 test-inodes: test-core.o error.o test-inodes.o mount.o sector.o inode.o filev6.o
 
 test-file: test-core.o error.o test-file.o mount.o sector.o inode.o filev6.o sha.o
@@ -10,6 +10,8 @@ test-file: test-core.o error.o test-file.o mount.o sector.o inode.o filev6.o sha
 test-dirent: test-core.o test-dirent.o error.o mount.o sector.o inode.o sha.o filev6.o direntv6.o
 
 shell: shell.o filev6.o direntv6.o error.o sector.o inode.o sha.o mount.o
+
+test-bitmap: test-bitmap.o bmblock.o
 
 clean:
 	rm *.o
