final version FUSE

--- a/done/makefile
+++ b/done/makefile
@@ -2,14 +2,16 @@ CFLAGS += -Wall -pedantic -g -std=c99 -Wextra -Wfloat-equal -Wshadow -Wpointer-a
 LDLIBS += -lm -lcrypto
 CC = gcc
 
-all: test-inodes test-file test-dirent shell
-test-inodes: test-core.o error.o test-inodes.o mount.o sector.o inode.o filev6.o
+all: test-inodes test-file test-dirent shell fs test-bitmap
+test-inodes: test-core.o error.o test-inodes.o mount.o sector.o inode.o filev6.o bmblock.o
 
-test-file: test-core.o error.o test-file.o mount.o sector.o inode.o filev6.o sha.o
+test-file: test-core.o error.o test-file.o mount.o sector.o inode.o filev6.o sha.o bmblock.o
 
-test-dirent: test-core.o test-dirent.o error.o mount.o sector.o inode.o sha.o filev6.o direntv6.o
+test-dirent: test-core.o test-dirent.o error.o mount.o sector.o inode.o sha.o filev6.o direntv6.o bmblock.o
 
-shell: shell.o filev6.o direntv6.o error.o sector.o inode.o sha.o mount.o
+shell: shell.o filev6.o direntv6.o error.o sector.o inode.o sha.o mount.o bmblock.o
+
+test-bitmap: test-bitmap.o bmblock.o
 
 clean:
 	rm *.o
@@ -17,5 +19,5 @@ clean:
 fs.o: fs.c
 	$(COMPILE.c) -D_DEFAULT_SOURCE $$(pkg-config fuse --cflags) -o $@ -c $<
 
-fs: fs.o mount.o sector.o
+fs: fs.o mount.o sector.o inode.o filev6.o direntv6.o error.o bmblock.o
 	$(LINK.c) -o $@ $^ $(LDLIBS) $$(pkg-config fuse --libs)
